# programming_llm

./: .gitignore  README.md  construct_index.py  llm_client.py  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py  llm_server.py  pyproject.toml
data/: essay.txt
notebooks/: code_generation.ipynb  frontend.ipynb
programming_llm/: llm.py
programming_llm/prompt/terminal/: prompt.json
proto/: llm.proto
